--- a/Bike_Share_Analysis_Case_Study/Bike_Share_Analysis_Report.Rmd
+++ b/Bike_Share_Analysis_Case_Study/Bike_Share_Analysis_Report.Rmd
@@ -10,55 +10,58 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Report Outline
-* [Current Status](#current-status)
-* [Business Task](#business-task)
-* [Data Sources](#data-sources)
-* [Data Cleaning](#data-cleaning)
-* [Data Preparation-Processing](#data-preparation-processing)
-* [Analysis](#analysis)
-* [Actions](#actions)
-* [Appendix](#appendix)
 
-## Current Status
+-   [Current Status](#current-status)
+-   [Business Task](#business-task)
+-   [Data Sources](#data-sources)
+-   [Data Cleaning](#data-cleaning)
+-   [Data Preparation-Processing](#data-preparation-processing)
+-   [Analysis](#analysis)
+-   [Actions](#actions)
+-   [Appendix](#appendix)
+
+## Current Status {#current-status}
 
 The company `Cyclistic` offers a bike-share service to a network of 692 stations in Chicago. There are three types of pricing plans:
 
-* single-ride pass
-* full-day pass
-* annual membership
+-   single-ride pass
+-   full-day pass
+-   annual membership
 
 **Casual riders:** customers who use single-ride or full-day passes.  
-**Annual members:** customers who purchase annual memberships.  
-  
+**Annual members:** customers who purchase annual memberships.
+
 Finance analysts at `Cyclistic` have determined that annual members are more profitable than casual riders.
 
-## Business Task
-The current goal of `Cyclistic` is to develop marketing strategies that will convert casual riders into annual members. In order for that to happen, *the marketing team needs to understand how casual riders differ from annual members.*  
+## Business Task {#business-task}
+
+The current goal of `Cyclistic` is to develop marketing strategies that will convert casual riders into annual members. In order for that to happen, *the marketing team needs to understand how casual riders differ from annual members.*\
 **This report analyzes how casual riders and annual members use Cyclistic bikes differently using data from last year, 2021.**
 
-## Data Sources
-The data is publicly available [here](https://ride.divvybikes.com/system-data) from the source company Divvy, designated as `Cyclistic` in this report. The data is provided under this [license](https://ride.divvybikes.com/data-license-agreement).
-The data is provided by the month, and contains anonymized information about:
+## Data Sources {#data-sources}
 
-* Trip start datetime
-* Trip end datetime
-* Trip start station
-* Trip end station
-* Trip start latitude/longitude
-* Trip end latitude/longitude
-* Rider membership type
-* Bicycle type
+The data is publicly available [here](https://ride.divvybikes.com/system-data) from the source company Divvy, designated as `Cyclistic` in this report. The data is provided under this [license](https://ride.divvybikes.com/data-license-agreement). The data is provided by the month, and contains anonymized information about:
+
+-   Trip start datetime
+-   Trip end datetime
+-   Trip start station
+-   Trip end station
+-   Trip start latitude/longitude
+-   Trip end latitude/longitude
+-   Rider membership type
+-   Bicycle type
 
 The dataset in question is:
 
-* _Reliable_: From the source company `Cyclistic` itself.
-* _Original_: This is novel data.
-* _Comprehensive_: This data covers enough features for us to analyze how casual riders and annual members differ.
-* _Current_: Covers the previous year, 2021.
-* _Cited_: see [Data Sources](#data-sources)
+-   *Reliable*: From the source company `Cyclistic` itself.
+-   *Original*: This is novel data.
+-   *Comprehensive*: This data covers enough features for us to analyze how casual riders and annual members differ.
+-   *Current*: Covers the previous year, 2021.
+-   *Cited*: see [Data Sources](#data-sources)
 
-## Data Cleaning
-The data was concatenated using [this](https://github.com/hannankhan888/Data_Science_Portfolio/blob/main/Bike_Share_Analysis_Case_Study/data_concatenation.ipynb) Jupyter Notebook.  
+## Data Cleaning {#data-cleaning}
+
+The data was concatenated using [this](https://github.com/hannankhan888/Data_Science_Portfolio/blob/main/Bike_Share_Analysis_Case_Study/data_concatenation.ipynb) Jupyter Notebook.
 
 ```{r loading libraries, results = 'hide'}
 library(tidyverse)
@@ -67,18 +70,22 @@ library(lubridate)
 ```
 
 Since the 2021 data is now all in one file, we can load it and take a peek at its structure:
+
 ```{r loading dataset}
 df <- read_csv("D:\\Datasets\\Divvy_Trips_Data\\Divvy_Trips_2021\\2021_all_data.csv")
 str(df)
 ```
 
 We rename the "...1" column and make sure that all columns have consistent nomenclature:
+
 ```{r renaming columns}
 df <- rename(df, index = "...1")
 colnames(df)
 clean_names(df)
 ```
+
 Lets make sure our datetime columns are formatted as such:
+
 ```{r formatting datetime columns}
 df[["started_at"]] <- as.POSIXct(df[["started_at"]],
                                  format = "%Y-%m-%d %H:%M:%S")
@@ -89,13 +96,14 @@ df[["ended_at"]] <- as.POSIXct(df[["ended_at"]],
 sapply(df, class)
 ```
 
-
 We look at null values for our data frame by column:
+
 ```{r checking for null values}
 colSums(is.na.data.frame(df))
 ```
 
 We have a lot of null values in certain columns. Let's get rid of the values in the largest column (end_station_name):
+
 ```{r removing null values}
 df <- drop_na(df, end_station_name)
 
@@ -104,6 +112,7 @@ colSums(is.na.data.frame(df))
 ```
 
 We still have around 270k null values, so we keep cleaning:
+
 ```{r removing null values again}
 df <- drop_na(df, start_station_name)
 
@@ -111,39 +120,155 @@ df <- drop_na(df, start_station_name)
 colSums(is.na.data.frame(df))
 ```
 
-Great! Now the data frame is free of null values.  
+Great! Now the data frame is free of null values.\
 We can proceed to check for duplicates in the data. Since the ride_id is a primary key, we can use that to see if we have any duplicates in our data:
+
 ```{r checking for duplicates}
 get_dupes(df, ride_id)
 ```
 
 Now our data is:
 
-* Correctly named
-* Correctly formatted
-* Free of null values
-* Free of duplicates
+-   Correctly named
+-   Correctly formatted
+-   Free of null values
+-   Free of duplicates
 
-The steps taken above verify the dataset's integrity.  
-In terms of bias, this does not seem to be an issue with the dataset. All bike rides are included (except those taken by service staff as they would skew the data), and each ride is anonymized.  
+The steps taken above verify the dataset's integrity.\
+In terms of bias, this does not seem to be an issue with the dataset. All bike rides are included (except those taken by service staff as they would skew the data), and each ride is anonymized.\
 In terms of how this data will help us answer the business task, we will need to engineer some new features in the next section.
 
-## Data Preparation-Processing
+## Data Preparation-Processing {#data-preparation-processing}
+
+We should create a column with `ride_length` in seconds, so we can see how long each ride lasted:
+
+```{r creating ride length column}
+df <- df %>%
+  mutate(ride_length = as.numeric(difftime(ended_at,started_at,units="secs"),
+                                  units="secs"))
+```
+
+We can also create a `weekday` value for our analysis:
+
+```{r creating weekday column}
+df <- df %>%
+  mutate(weekday = weekdays(df$started_at))
+```
+
+Lastly, in order to prepare our data fully, we can include a column for the time of day. This is subjective, however, according to the English definitions of times of day, we get the following:
+
+```{r creating time_of_day column}
+# we can find the starting time of day for each ride (morning, afternoon, evening):
+# {
+#   morning:    00:00:00-11:59:59
+#   afternoon:  12:00:00-17:59:59
+#   evening:    18:00:00-23:59:59
+# }
+# src: https://stackoverflow.com/questions/62419598/r-convert-time-to-time-of-day
+get_time_of_day <- function(start_time) {
+  hour_time <- hour(start_time)
+  case_when(hour_time >= 0 & hour_time <= 11 ~ 'morning',
+            hour_time >= 12 & hour_time <= 17 ~ 'afternoon',
+            hour_time >= 18 & hour_time <= 23 ~ 'evening')
+}
+df <- df %>%
+  mutate(time_of_day = get_time_of_day(started_at))
+```
+
+Since the last function's application can insert null values, lets take a peek at our data again:
+
+```{r checking final data}
+sapply(df, class)
+str(df)
+colSums(is.na.data.frame(df))
+```
+
+## Analysis {#analysis}
+Here are some basic statistics about our member types:
+```{r basic statistics table}
+# src: https://www.tutorialspoint.com/r/r_mean_median_mode.htm
+mode_calc <- function (v) {
+  uniqv <- unique(v)
+  uniqv[which.max(tabulate(match(v, uniqv)))]
+}
+df %>%
+  group_by(member_casual) %>%
+  summarize(count = n(),
+            mean_ride_len_s = mean(ride_length),
+            mean_ride_len_m = mean(ride_length)/60,
+            max_ride_len_s = max(ride_length),
+            max_ride_len_m = max(ride_length)/60,
+            most_common_wkday = mode_calc(weekday))
+```
+From this table, we can conclude the following:
+
+* Annual members have higher usage overall (already confirmed by finance analysts).
+* Casual members ride for a longer average time per ride.
+* Maximum ride time is significantly higher for casual members.
+* Weekday matters to the member type.
+
+Since weekday matters to the member type, we will investigate further. Let's calculate the most common days of the week by member type:
+```{r days of week by member type}
+df %>%
+  group_by(member_casual, weekday) %>%
+  summarize(observations = n()) %>%
+  pivot_wider(names_from = weekday, values_from = observations)
+
+ggplot(df, mapping=aes(x=weekday, fill=rideable_type)) +
+  geom_bar() +
+  facet_wrap(~member_casual) +
+  labs(x = "Weekday",
+       y = "Count",
+       title = "Number Of Rides Per Day By Member Type") +
+  scale_fill_brewer(name = "Rideable Type", labels = c("Classic Bike", "Docked Bike", "Electric Bike"),
+                    palette = "Blues") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45))
+```
+From this visualization, we can conclude:
+
+* Annual members do not significantly use docked bikes.
+* Casual rider usage peaks on weekends.
+* Annual members use bikes throughout the week.
+* Classic and electric bikes are the most common for both casual riders and annual members.
+
+Let's see how this correlates to the average ride length by day:
+```{r ride length by day}
+df %>%
+  group_by(member_casual, weekday) %>%
+  summarize(avg_ride_len = mean(ride_length)) %>%
+  pivot_wider(names_from = weekday, values_from = avg_ride_len)
+
+ggplot(df,mapping = aes(x = weekday, y = ride_length)) +
+  geom_bar(stat = "summary", fun = "mean", fill = "#3182bd") +
+  facet_wrap(~member_casual) +
+  labs(x = "Weekday",
+       y = "Average Ride Length",
+       title = "Average Ride Length By Weekday Based On Member Type") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45),
+        legend.position = "none")
+```
+The above chart has taught us:
+
+* Casual riders have 2x average ride length of annual members.
+
+What about the number of rides by day?
 
 
 
+## Actions {#actions}
 
-
-## Analysis
-## Actions
-## Appendix
-| Description | File |
-|    :----   | :---: |
-| Jupyter notebook used for data concatenation. | [data_concatenation.ipynb](https://github.com/hannankhan888/Data_Science_Portfolio/blob/main/Bike_Share_Analysis_Case_Study/data_concatenation.ipynb) |
-| General analysis/scratch file script. | [Bike_Share_Analysis.R](https://github.com/hannankhan888/Data_Science_Portfolio/blob/main/Bike_Share_Analysis_Case_Study/Bike_Share_Analysis.R) |
-| This report in R markdown notebook format. | [Bike_Share_Analysis_Report.Rmd](https://github.com/hannankhan888/Data_Science_Portfolio/blob/main/Bike_Share_Analysis_Case_Study/Bike_Share_Analysis_Report.Rmd) |
-
-
-
-
-
+## Appendix {#appendix}
+### Definitions
+**Annual members:** customers who purchase annual memberships.  
+**Casual riders:** customers who use single-ride or full-day passes.  
+**Docked bikes:** bikes that are borrowed from and returned to docking stations (docks). They can be returned to a different station.
+**Dockless bikes:** bikes that do not require a docking station. These are typically parked within the bike share district at a bike rack or on the sidewalk.
+**Electric bikes:** a motorized bicycle.
+### Files Used
+| Description                                   |                                                                               File                                                                                |
+|:----------------------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------------------:|
+| Jupyter notebook used for data concatenation. |       [data_concatenation.ipynb](https://github.com/hannankhan888/Data_Science_Portfolio/blob/main/Bike_Share_Analysis_Case_Study/data_concatenation.ipynb)       |
+| General analysis/scratch file script.         |          [Bike_Share_Analysis.R](https://github.com/hannankhan888/Data_Science_Portfolio/blob/main/Bike_Share_Analysis_Case_Study/Bike_Share_Analysis.R)          |
+| This report in R markdown notebook format.    | [Bike_Share_Analysis_Report.Rmd](https://github.com/hannankhan888/Data_Science_Portfolio/blob/main/Bike_Share_Analysis_Case_Study/Bike_Share_Analysis_Report.Rmd) |
