minor changes to bike share analysis

--- a/Bike_Share_Analysis_Case_Study/Bike_Share_Analysis_Report.Rmd
+++ b/Bike_Share_Analysis_Case_Study/Bike_Share_Analysis_Report.Rmd
@@ -9,8 +9,6 @@ output:
     toc_float:
       collapsed: no
       smooth_scroll: yes
-  pdf_document:
-    toc: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -95,6 +93,12 @@ consistent nomenclature:
 
 ```{r renaming columns}
 df <- rename(df, index = "...1")
+df <- rename(df, Member_Type = "member_casual")
+
+# let's convert the member types to uppercase:
+df$Member_Type[df$Member_Type=="casual"] <- "Casual"
+df$Member_Type[df$Member_Type=="member"] <- "Member"
+
 colnames(df)
 clean_names(df)
 ```
@@ -191,9 +195,9 @@ definitions of times of day, we get the following:
 # src: https://stackoverflow.com/questions/62419598/r-convert-time-to-time-of-day
 get_time_of_day <- function(start_time) {
   hour_time <- hour(start_time)
-  case_when(hour_time >= 0 & hour_time <= 11 ~ 'morning',
-            hour_time >= 12 & hour_time <= 17 ~ 'afternoon',
-            hour_time >= 18 & hour_time <= 23 ~ 'evening')
+  case_when(hour_time >= 0 & hour_time <= 11 ~ 'Morning',
+            hour_time >= 12 & hour_time <= 17 ~ 'Afternoon',
+            hour_time >= 18 & hour_time <= 23 ~ 'Evening')
 }
 df <- df %>%
   mutate(time_of_day = get_time_of_day(started_at))
@@ -221,14 +225,21 @@ mode_calc <- function (v) {
   uniqv[which.max(tabulate(match(v, uniqv)))]
 }
 df %>%
-  group_by(member_casual) %>%
+  group_by(Member_Type) %>%
   summarize(count = n(),
             mean_ride_len_s = mean(ride_length),
             mean_ride_len_m = mean(ride_length)/60,
             max_ride_len_s = max(ride_length),
             max_ride_len_m = max(ride_length)/60,
             most_common_wkday = mode_calc(weekday)) %>%
-  datatable() %>%
+  datatable(caption = "Table 1: Basic Statistics Of Each Member Type",
+            class = "hover",
+            options = list(
+              initComplete = JS(
+                "function(settings, json) {",
+                "$(this.api().table().header()).css({'background-color': '#3288bd', 'color': 'white'});",
+                "}")
+              )) %>%
   formatRound(c("mean_ride_len_s", "mean_ride_len_m", "max_ride_len_m"), 1)
 ```
 
@@ -245,15 +256,22 @@ Let's calculate the most common days of the week by member type:
 
 ```{r days of week by member type}
 df %>%
-  group_by(member_casual, weekday) %>%
+  group_by(Member_Type, weekday) %>%
   summarize(observations = n()) %>%
   pivot_wider(names_from = weekday, values_from = observations) %>%
   select(ordered_weekdays) %>%
-  datatable()
+  datatable(caption = "Table 2: Number Of Rides Per Day By Member Type",
+            class = "hover",
+            options = list(
+              initComplete = JS(
+                "function(settings, json) {",
+                "$(this.api().table().header()).css({'background-color': '#3288bd', 'color': 'white'});",
+                "}")
+            ))
 
 ggplot(df, mapping=aes(x=weekday, fill=rideable_type)) +
   geom_bar() +
-  facet_wrap(~member_casual) +
+  facet_wrap(~Member_Type) +
   labs(x = "Weekday",
        y = "Count",
        title = "Number Of Rides Per Day By Member Type") +
@@ -278,16 +296,23 @@ Let's see how this correlates to the average ride length by day:
 
 ```{r ride length by day}
 df %>%
-  group_by(member_casual, weekday) %>%
+  group_by(Member_Type, weekday) %>%
   summarize(avg_ride_len = mean(ride_length)) %>%
   pivot_wider(names_from = weekday, values_from = avg_ride_len) %>%
   select(ordered_weekdays) %>%
-  datatable() %>%
+  datatable(caption = "Table 3: Average Ride Length By Weekday Based On Member Type",
+            class = "hover",
+            options = list(
+              initComplete = JS(
+                "function(settings, json) {",
+                "$(this.api().table().header()).css({'background-color': '#3288bd', 'color': 'white'});",
+                "}")
+            )) %>%
   formatRound(ordered_weekdays, 1)
 
 ggplot(df,mapping = aes(x = weekday, y = ride_length)) +
   geom_bar(stat = "summary", fun = "mean", fill = "#3288bd") +
-  facet_wrap(~member_casual) +
+  facet_wrap(~Member_Type) +
   labs(x = "Weekday",
        y = "Average Ride Length",
        title = "Average Ride Length By Weekday Based On Member Type") +
@@ -306,19 +331,26 @@ We can also look at common times of day for each member type:
 
 ```{r time of day}
 df %>%
-  group_by(member_casual, time_of_day) %>%
+  group_by(Member_Type, time_of_day) %>%
   summarize(observations = n()) %>%
   pivot_wider(names_from = time_of_day, values_from = observations) %>%
-  select(c("morning", "afternoon", "evening")) %>%
-  datatable()
+  select(c("Morning", "Afternoon", "Evening")) %>%
+  datatable(caption = "Table 4: Time Of Day Usage Based On Member Type",
+            class = "hover",
+            options = list(
+              initComplete = JS(
+                "function(settings, json) {",
+                "$(this.api().table().header()).css({'background-color': '#3288bd', 'color': 'white'});",
+                "}")
+            ))
 
 ggplot(df, mapping = aes(x = time_of_day)) +
   geom_bar(fill = "#3288bd") +
-  facet_wrap(~member_casual) +
+  facet_wrap(~Member_Type) +
   labs(x = "Time Of Day",
        y = "Count",
        title = "Time Of Day Based On Member Type") +
-  scale_x_discrete(limits = c("morning", "afternoon", "evening")) +
+  scale_x_discrete(limits = c("Morning", "Afternoon", "Evening")) +
   scale_y_continuous(labels = label_number_si()) +
   theme_minimal()
 ```
